asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__log__grep_no_match.snap
---
source: asyncgit/src/lib/tui/git/tests/log.rs
assertion_line: 53
expression: ctx.redact_buffer()
---
▌No commits found                                                               |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 90ecdf643519e051
