asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__log__grep_prompt.snap
---
source: asyncgit/src/lib/tui/git/tests/log.rs
assertion_line: 38
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 3 commit.                             |
                                                                                |
 Recent commits                                                                 |
 8bb5532 main add first commit                                                  |
 6c08cf7 add second commit                                                      |
 79e63f1 add third commit                                                       |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Search messages: ›                                                            |
────────────────────────────────────────────────────────────────────────────────|
Log                     Arguments                                               |
l current               -F Search messages (--grep)                             |
o other                 -n Limit number of commits (-n=256)                     |
q/<esc> Quit/Close                                                              |
styles_hash: 1975e842a24d7fe3
