asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__log__grep_second_other.snap
---
source: asyncgit/src/lib/tui/git/tests/log.rs
assertion_line: 58
expression: ctx.redact_buffer()
---
▌6c08cf7 add second commit                                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 48d19316a51368e3
