asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__log__limit_2_commits_other.snap
---
source: asyncgit/src/lib/tui/git/tests/log.rs
assertion_line: 33
expression: ctx.redact_buffer()
---
▌8bb5532 main add first commit                                                  |
 6c08cf7 add second commit                                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: a908290abddd40c9
