asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__log__log_other_input.snap
---
source: asyncgit/src/lib/tui/git/tests/log.rs
assertion_line: 73
expression: ctx.redact_buffer()
---
▌6c08cf7 add second commit                                                      |
 79e63f1 add third commit                                                       |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 99c011aa1629f1d
